<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_loc_name"
        app:layout_constraintBottom_toTopOf="@+id/getLoc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/getLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_get_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />


<!--    topleft-->
    <TextView
        android:id="@+id/tv_lbl_guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_name"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_lbl_lat"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lat_name"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_guess"/>



    <TextView
        android:id="@+id/tv_data_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/def_val_gps"
        app:layout_constraintStart_toEndOf="@+id/tv_lbl_lat"
        app:layout_constraintTop_toTopOf="@+id/tv_lbl_lat" />


    <TextView
        android:id="@+id/tv_lbl_long"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/long_name"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_lat" />

    <TextView
        android:id="@+id/tv_data_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/def_val_gps"
        app:layout_constraintStart_toEndOf="@+id/tv_lbl_long"
        app:layout_constraintTop_toTopOf="@+id/tv_lbl_long" />

    <TextView
        android:id="@+id/tv_lbl_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diff_name"
        app:layout_constraintBottom_toTopOf="@+id/getLoc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.313" />

    <TextView
        android:id="@+id/tv_data_diff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dist_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_diff" />

    <Button
        android:id="@+id/getTarget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_but_name"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getLoc" />

    <TextView
        android:id="@+id/tv_lbl_target"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_name"
        android:layout_marginTop="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_data_tarLat"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/def_val_gps"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_target"/>

    <TextView
        android:id="@+id/tv_lbl_tarLat"
        android:layout_width="50dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/lat_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_data_tarLat"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_target"/>

    <TextView
        android:id="@+id/tv_data_tarLon"
        android:layout_height="wrap_content"
        android:layout_width="70dp"
        android:text="@string/def_val_gps"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_tarLat"/>

    <TextView
        android:id="@+id/tv_lbl_tarLon"
        android:layout_width="50dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/long_name"
        app:layout_constraintEnd_toStartOf="@+id/tv_data_tarLon"
        app:layout_constraintTop_toBottomOf="@+id/tv_lbl_tarLat"/>

    <TextView
        android:id="@+id/tv_lbl_showWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_win"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_data_showWin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/show4dash"
        app:layout_constraintTop_toTopOf="@+id/tv_lbl_showWin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>